Fixed compatibility issues with Safari/Firefox (horizontal scrolling, scalability)

--- a/css/master.css
+++ b/css/master.css
@@ -62,13 +62,13 @@ a:hover {
 }
 
 #banner {
-	min-width: 1500px;
 	min-height: 500px;
 	margin-bottom: 50px;
 	overflow: hidden;
 }
 
 #banner img {
+	min-width: 1500px;
 	width: 100%;
 	height: 100%;
 }
@@ -85,7 +85,8 @@ header {
 }
 
 #profile /* For Name */ {
-	min-width: 2000px;
+	min-width: 1400px;
+	width: 100%;
 	height: 100px;
 	position: static;
 }
@@ -217,13 +218,13 @@ main h3 {
 
 #target {
 	text-decoration: underline;
+	text-decoration-color: #536dfe;
 }
 
 
 /* --- Projects --- */
 
 .proj-preview /* Singular Project Container */ {
-	width: 100%;
 	height: 300px;
 	margin-top: 10px;
 }
@@ -234,8 +235,9 @@ main h3 {
 }
 
 .info h3 {
-	min-width: 1200px;
+	min-width: 1000px;
 	margin-top: 30px;
+	padding-right: 20px;
 }
 
 .info a {
@@ -248,8 +250,7 @@ main h3 {
 }
 
 .info p {
-	min-width: 1000px;
-	max-width: 1000px;
+	width: 1000px;
 	font-weight: lighter;
 	font-size: 1.25rem;
 }
